[package]
name = "evmodin"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1", default-features = false }
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
bytes = { version = "1", default-features = false, features = ["serde"] }
derive_more = "0.99"
educe = { version = "0.4", default-features = false, optional = true }
enum-as-inner = "0.3"
evmc-declare = { git = "https://github.com/ethereum/evmc", optional = true }
evmc-vm = { git = "https://github.com/ethereum/evmc", optional = true }
i256 = { git = "https://github.com/vorot93/rust-i256" }
ethereum-types = { version = "0.12", default-features = false }
genawaiter = { git = "https://github.com/cuviper/genawaiter", branch = "unhacked" }
hex = "0.4"
hex-literal = { version = "0.3", optional = true }
num-traits = { version = "0.2", default-features = false }
once_cell = "1"
parking_lot = { version = "0.11", optional = true }
primitive-types = { version = "0.10", default-features = false, features = [
    "serde",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.9"
strum_macros = "0.21"

[dev-dependencies]
evmodin-test = { path = ".", package = "evmodin", features = ["util"] }
hex-literal = "0.3"
rand = { version = "0.8", features = ["std"] }

[features]
evmc = ["evmc-declare", "evmc-vm"]
util = ["educe/Debug", "hex-literal", "parking_lot"]
