[package]
name = "evmodin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Fast EVM implementation with support for resumability."

[dependencies]
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
bytes = { version = "1", default-features = false, features = ["serde"] }
derive_more = { version = "0.99", default-features = false, features = [
    "from",
] }
educe = { version = "0.4", default-features = false, features = ["Debug"] }
enum-as-inner = { version = "0.3", default-features = false }
evmc-declare = { git = "https://github.com/ethereum/evmc", tag = "v10.0.0-alpha.1", optional = true }
evmc-vm = { git = "https://github.com/ethereum/evmc", tag = "v10.0.0-alpha.1", optional = true }
i256 = { git = "https://github.com/vorot93/rust-i256" }
ethereum-types = { version = "0.12", default-features = false }
genawaiter = { git = "https://github.com/cuviper/genawaiter", branch = "unhacked" }
getset = { version = "0.1", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.3", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false }
once_cell = { version = "1", default-features = false, features = ["alloc"] }
parking_lot = { version = "0.11", optional = true }
primitive-types = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha3 = "0.9"
strum_macros = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.3", features = ["js"] }

[dev-dependencies]
evmodin-test = { path = ".", package = "evmodin", features = ["util"] }
hex-literal = "0.3"
rand = { version = "0.8", features = ["std"] }

[features]
std = []
evmc = ["std", "evmc-declare", "evmc-vm"]
util = [
    "std",
    "hex-literal",
    "parking_lot",
    "primitive-types/serde",
    "serde",
    "serde_json",
]

[lib]
name = "evmodin"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]
